--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -5516,6 +5516,7 @@ input[type="submit"].btn.btn-mini {
   bottom: -10px;
   border-left-color: #ffffff;
   border-right-width: 0;
+  color: #C7CBE9;
 }
 
 .thumbnails {
