Added personalized dashboard and business pages

--- a/templates/company.html
+++ b/templates/company.html
@@ -18,7 +18,7 @@
     <div class="form-title">What about your company?</div>
   <div class="form-container">
 
-  <form id="signup"  onsubmit="/dashboard" style="margin-top: 30px">
+  <form id="signup" action="dashboard" style="margin-top: 30px">
     <div id="form">
       <label style="color:#fff; font-size: 18px" for="nickname">Name: </label>
       <input type="text" id="nickname" class="input-large" placeholder="Select your company profile"/><br>
