--- a/templates/business.html
+++ b/templates/business.html
@@ -11,8 +11,8 @@
     <link href="static/css/bootstrap.css" rel="stylesheet">
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="bootstrap/js/bootstrap.js" ></script>
-    <link href="metric.css" rel="stylesheet">
+<script src="/static/js/bootstrap.js" ></script>
+    <link href="/static/css/metric.css" rel="stylesheet">
     <style type="text/css">
       body {
         margin: 0;
@@ -191,6 +191,5 @@ $('#popoverOption').popover({ trigger: "hover" });
     </div>
   </div>
 
-  <script src="js/bootstrap.js"></script>
 </body>
 </html>
