--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,12 +7,11 @@
   <meta name="description" content="">
     <meta name="author" content="">
   <!-- Bootstrap -->
-  <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="static/css/bootstrap.css" rel="stylesheet">
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="bootstrap/js/bootstrap.js" ></script>
-    <link href="metric.css" rel="stylesheet">
+<script src="/static/js/bootstrap.js" ></script>
+    <link href="/static/css/metric.css" rel="stylesheet">
     <style type="text/css">
       body {
         margin: 0;
@@ -188,7 +187,5 @@ $('#popoverOption').popover({ trigger: "hover" });
       <img src="static/images/interfata 1.png"/>
     </div>
   </div>
-
-  <script src="js/bootstrap.js"></script>
 </body>
 </html>
