--- a/templates/modify.html
+++ b/templates/modify.html
@@ -7,8 +7,8 @@
   <meta name="description" content="">
     <meta name="author" content="">
   <!-- Bootstrap -->
-  <link href="css/bootstrap.css" rel="stylesheet" media="screen">
-    <link href="static/css/bootstrap.css" rel="stylesheet">
+  <link href="/static/bootstrap.css" rel="stylesheet" media="screen">
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script src="/static/js/bootstrap.js" ></script>
@@ -180,16 +180,15 @@ $('#popoverOption').popover({ trigger: "hover" });
     <img src="{{picture}}" class="user-image"/>
     </div>
     <div class="breadcrumbs">
-      <span style="position:relative; left:30px">
-      Dashboard >> Internet Systems
+      <span style="position:relative; left:90px">
+      Dashboard >> Internet Systems >> Modify Contract
     </span>
       <div class="dollars"><b>$1,000</b> in stock</div>
     </div>
     <div class="inner">
-      <a href="modify" id="modify"></a>
-      <img src="static/images/interfata afacere.png"/>
+
+      <img src="static/images/interfata modify terms.png"/>
     </div>
   </div>
-
 </body>
 </html>
